# PDB-VSY

./: .gitignore  Makefile  README.md  SLAVELOGSERROR.txt  base.docx  listingCreateUser.txt  mynotes.txt  scheme.txt  schemeview.pgerd  systemDB.yml  tableDeclaration.txt  Задание_КП_БД_ПОИТ.doc  Титульный.docx
backend/: pyproject.toml
backend/app/: admin.py  dto.py  main.py
backend/app/admintemplate/: details.html
backend/app/handlers/: passmaker.py
backend/app/json/: categories.json  comments.json  fixture.py  orderdetails.json
backend/app/orm/: orm.py  retrieve_image.py
backend/templates/: create_product.html  details_image_category.html  details_image_product.html  edit_image_category.html  edit_image_product.html
docs/: SystemScheme.drawio
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Home.js  RecoilStatesSelectors.js  index.js
frontend/src/Auth/: SignIn.js  SignUp.js
frontend/src/Store/: AddressForm.js  Caret.js  Checkout.js  Comments.js  ConfirmBuyButton.js  Footer.js  Header.js  MyOrders.js  PaymentDialog.js  PaymentForm.js  ProductDetail.js  ProductListItem.js  ProductsList.js  Review.js  Store.js
frontend/src/Utils/: NotFoundPage.js
stream_repl/: Makefile  local.yml
stream_repl/primary/: .pgpass  primary.Dockerfile  primary.env  primary.postgresql.conf
stream_repl/primary/scripts/: cron  dump_json_db.sh  dump_sql.sh  init.sh  insert_json.sh  (+1 more)
stream_repl/remote/: .pgpass  Makefile  remote.yml
stream_repl/standby/: .pgpass  primary.env  standby.Dockerfile  standby.env
(+14 files in other folders)
